syntax = "proto3";

package api;

option go_package = "gohire/proto/gen/api";
  
service UserService {
    // rpc SignIn(SignInRequest) returns (SignInResponse) {}
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse) {}
    rpc PostUsers(PostUsersRequest) returns (PostUsersResponse) {}
    rpc UpdateUser(UpdateUserRequest) returns (UpdateUserResponse) {}
}

message User {
    string id = 1;
    // The name of the user.
    // Format: users/{username}
    string username = 2;      
    string first_name = 4;
    string last_name = 5;
    string password = 6;
    string avatar_url = 7;
}

message SignInRequest {
    string username = 1;
    string password = 2;
}
  
message SignInResponse {
    User user = 1;
}

message GetUsersRequest {
    string id = 1;
}
  
message GetUsersResponse {
    repeated User users = 1;
}

message PostUsersRequest {
    string username = 2;      
    string first_name = 4;
    string last_name = 5;
    string password = 6;
}
  
message PostUsersResponse {
    string username = 2;      
    string first_name = 4;
    string last_name = 5;
}

message UpdateUserRequest {
    string id = 1;
    string first_name = 4;
    string last_name = 5;
}
  
message UpdateUserResponse {
    User user = 1;
}
